vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
typedef ULONG	FT_STATUS;
enum {
	FT_OK,
	FT_INVALID_HANDLE,
	FT_DEVICE_NOT_FOUND,
	FT_DEVICE_NOT_OPENED,
	FT_IO_ERROR,
	FT_INSUFFICIENT_RESOURCES,
	FT_INVALID_PARAMETER,
	FT_INVALID_BAUD_RATE,
	FT_DEVICE_NOT_OPENED_FOR_ERASE,
	FT_DEVICE_NOT_OPENED_FOR_WRITE,
	FT_FAILED_TO_WRITE_DEVICE,
	FT_EEPROM_READ_FAILED,
	FT_EEPROM_WRITE_FAILED,
	FT_EEPROM_ERASE_FAILED,
	FT_EEPROM_NOT_PRESENT,
	FT_EEPROM_NOT_PROGRAMMED,
	FT_INVALID_ARGS,
	FT_NOT_SUPPORTED,
	FT_OTHER_ERROR,
	FT_DEVICE_LIST_NOT_READY,
};
typedef ULONG	FT_DEVICE;
	typedef struct ft_program_data {
		DWORD Signature1;			
		DWORD Signature2;			
		DWORD Version;				
		WORD VendorId;				
		WORD ProductId;				
		char *Manufacturer;			
		char *ManufacturerId;		
		char *Description;			
		char *SerialNumber;			
		WORD MaxPower;				
		WORD PnP;					
		WORD SelfPowered;			
		WORD RemoteWakeup;			
		UCHAR Rev4;					
		UCHAR IsoIn;				
		UCHAR IsoOut;				
		UCHAR PullDownEnable;		
		UCHAR SerNumEnable;			
		UCHAR USBVersionEnable;		
		WORD USBVersion;			
		UCHAR Rev5;					
		UCHAR IsoInA;				
		UCHAR IsoInB;				
		UCHAR IsoOutA;				
		UCHAR IsoOutB;				
		UCHAR PullDownEnable5;		
		UCHAR SerNumEnable5;		
		UCHAR USBVersionEnable5;	
		WORD USBVersion5;			
		UCHAR AIsHighCurrent;		
		UCHAR BIsHighCurrent;		
		UCHAR IFAIsFifo;			
		UCHAR IFAIsFifoTar;			
		UCHAR IFAIsFastSer;			
		UCHAR AIsVCP;				
		UCHAR IFBIsFifo;			
		UCHAR IFBIsFifoTar;			
		UCHAR IFBIsFastSer;			
		UCHAR BIsVCP;				
		UCHAR UseExtOsc;			
		UCHAR HighDriveIOs;			
		UCHAR EndpointSize;			
		UCHAR PullDownEnableR;		
		UCHAR SerNumEnableR;		
		UCHAR InvertTXD;			
		UCHAR InvertRXD;			
		UCHAR InvertRTS;			
		UCHAR InvertCTS;			
		UCHAR InvertDTR;			
		UCHAR InvertDSR;			
		UCHAR InvertDCD;			
		UCHAR InvertRI;				
		UCHAR Cbus0;				
		UCHAR Cbus1;				
		UCHAR Cbus2;				
		UCHAR Cbus3;				
		UCHAR Cbus4;				
		UCHAR RIsD2XX;				
		UCHAR PullDownEnable7;		
		UCHAR SerNumEnable7;		
		UCHAR ALSlowSlew;			
		UCHAR ALSchmittInput;		
		UCHAR ALDriveCurrent;		
		UCHAR AHSlowSlew;			
		UCHAR AHSchmittInput;		
		UCHAR AHDriveCurrent;		
		UCHAR BLSlowSlew;			
		UCHAR BLSchmittInput;		
		UCHAR BLDriveCurrent;		
		UCHAR BHSlowSlew;			
		UCHAR BHSchmittInput;		
		UCHAR BHDriveCurrent;		
		UCHAR IFAIsFifo7;			
		UCHAR IFAIsFifoTar7;		
		UCHAR IFAIsFastSer7;		
		UCHAR AIsVCP7;				
		UCHAR IFBIsFifo7;			
		UCHAR IFBIsFifoTar7;		
		UCHAR IFBIsFastSer7;		
		UCHAR BIsVCP7;				
		UCHAR PowerSaveEnable;		
		UCHAR PullDownEnable8;		
		UCHAR SerNumEnable8;		
		UCHAR ASlowSlew;			
		UCHAR ASchmittInput;		
		UCHAR ADriveCurrent;		
		UCHAR BSlowSlew;			
		UCHAR BSchmittInput;		
		UCHAR BDriveCurrent;		
		UCHAR CSlowSlew;			
		UCHAR CSchmittInput;		
		UCHAR CDriveCurrent;		
		UCHAR DSlowSlew;			
		UCHAR DSchmittInput;		
		UCHAR DDriveCurrent;		
		UCHAR ARIIsTXDEN;			
		UCHAR BRIIsTXDEN;			
		UCHAR CRIIsTXDEN;			
		UCHAR DRIIsTXDEN;			
		UCHAR AIsVCP8;				
		UCHAR BIsVCP8;				
		UCHAR CIsVCP8;				
		UCHAR DIsVCP8;				
		UCHAR PullDownEnableH;		
		UCHAR SerNumEnableH;		
		UCHAR ACSlowSlewH;			
		UCHAR ACSchmittInputH;		
		UCHAR ACDriveCurrentH;		
		UCHAR ADSlowSlewH;			
		UCHAR ADSchmittInputH;		
		UCHAR ADDriveCurrentH;		
		UCHAR Cbus0H;				
		UCHAR Cbus1H;				
		UCHAR Cbus2H;				
		UCHAR Cbus3H;				
		UCHAR Cbus4H;				
		UCHAR Cbus5H;				
		UCHAR Cbus6H;				
		UCHAR Cbus7H;				
		UCHAR Cbus8H;				
		UCHAR Cbus9H;				
		UCHAR IsFifoH;				
		UCHAR IsFifoTarH;			
		UCHAR IsFastSerH;			
		UCHAR IsFT1248H;			
		UCHAR FT1248CpolH;			
		UCHAR FT1248LsbH;			
		UCHAR FT1248FlowControlH;	
		UCHAR IsVCPH;				
		UCHAR PowerSaveEnableH;		
	} FT_PROGRAM_DATA, *PFT_PROGRAM_DATA;
	FTD2XX_API FT_STATUS WINAPI FT_EE_Program(
		FT_HANDLE ftHandle,
		PFT_PROGRAM_DATA pData
		);
	FTD2XX_API FT_STATUS WINAPI FT_EE_ProgramEx(
		FT_HANDLE ftHandle,
		PFT_PROGRAM_DATA pData,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);
	FTD2XX_API FT_STATUS WINAPI FT_EE_UASize(
		FT_HANDLE ftHandle,
		LPDWORD lpdwSize
		);
	FTD2XX_API FT_STATUS WINAPI FT_EE_UARead(
		FT_HANDLE ftHandle,
		PUCHAR pucData,
		DWORD dwDataLen,
		LPDWORD lpdwBytesRead
		);
	FTD2XX_API FT_STATUS WINAPI FT_EE_UAWrite(
		FT_HANDLE ftHandle,
		PUCHAR pucData,
		DWORD dwDataLen
		);
	typedef struct ft_eeprom_header {
		FT_DEVICE deviceType;		
		WORD VendorId;				
		WORD ProductId;				
		UCHAR SerNumEnable;			
		WORD MaxPower;				
		UCHAR SelfPowered;			
		UCHAR RemoteWakeup;			
		UCHAR PullDownEnable;		
	} FT_EEPROM_HEADER, *PFT_EEPROM_HEADER;
	typedef struct ft_eeprom_232b {
		FT_EEPROM_HEADER common;	
	} FT_EEPROM_232B, *PFT_EEPROM_232B;
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Read(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Program(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);